# VisualRS

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PRD.md  PROMPT.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/editor/: Cargo.toml
crates/editor/src/: app.rs  codegen.rs  lib.rs  main.rs  seed.rs  view.rs
crates/graph/: Cargo.toml
crates/graph/src/: build.rs  fixtures.rs  lib.rs  lower.rs  model.rs  validate.rs
crates/graph/tests/: compile.rs
crates/ir/: Cargo.toml
crates/ir/src/: expr.rs  fixtures.rs  item.rs  lib.rs  lit.rs  ops.rs  pat.rs  stmt.rs  ty.rs  validate.rs
crates/rustgen/: Cargo.toml
crates/rustgen/src/: expr.rs  item.rs  lib.rs  lit.rs  pat.rs  stmt.rs  ty.rs
crates/rustgen/tests/: compile.rs
docs/adr/: 0001-borrow-violation-visualization.md  0002-mvp-scope-cli-scripting-only.md  0003-editor-host-platform-godot-gdext.md  0004-flagship-domain-godot-gdext-gamedev.md  0005-target-agnostic-ir-rust-primary.md  0006-output-gui-toolkit-egui-swappable.md  0007-rust-version-compatibility-policy.md  0008-vr-graph-headless-front-end.md  0009-editor-host-standalone-egui-app.md  0010-node-graph-crate-egui-snarl.md  0011-upstream-improvements-to-dependencies.md  0012-documentation-driven-development-workflow.md  README.md
docs/superpowers/plans/: 2026-07-12-phase1-foundation-pipeline.md  2026-07-12-phase2-headless-graph-core.md  2026-07-24-vr-editor-walking-skeleton.md
docs/superpowers/specs/: 2026-07-12-phase2-headless-graph-core-design.md  2026-07-24-vr-editor-walking-skeleton-design.md
packaging/: README.md
packaging/windows/: visual-rust.iss
