[package]
name = "vr-ir"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Visual Rust: target-agnostic Typed IR"

[lib]
name = "vr_ir"

[dependencies]
# Intentionally empty: the IR is target-agnostic (ADR-0005). No syn/quote here, ever.
